# RDR2-Base

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
main/: CMakeLists.txt
main/include/: common.hpp  xorstr.hpp
main/source/: main.cpp  main.hpp
main/source/features/: features.cpp  features.hpp
main/source/hooks/: hooks.cpp  hooks.hpp
main/source/hooks/detours/: get_player_ped.cpp  kernel.cpp  present.cpp
main/source/script/: manager.cpp  manager.hpp  script.cpp  script.hpp
main/source/ui/: fonts.hpp  ui.cpp  ui.hpp
main/utility/: config.hpp  definitions.hpp
main/utility/invoker/: invoker.cpp  invoker.hpp  natives.hpp  queue.hpp
main/utility/logger/: logger.cpp  logger.hpp
main/utility/memory/signatures/: functions.hpp  signatures.cpp  signatures.hpp
main/utility/rage/: rage.hpp
